# Embedded-Systems-Design-and-Implementation

./: BT_Controller.py  Constant.py  KB_listener.py  README.md  install.sh  main.py  pyproject.toml  setup.py  uninstall.sh
bt_keyboard_adapter_pi/: KB_listener.py  RN42.py  __init__.py
bt_keyboard_adapter_rpi/: KB_listener.py  RN42.py
service/: bt_keyboard_adapter.service  bt_keyboard_adapter_rpi.service  xtrlock.service
