[tool.poetry]
name = "bt_keyboard_adapter_rpi"
version = "1.0.0"
description = ""
authors = ["kaiiiz <at881005@gmail.com>"]
packages = [
    { include = "bt_keyboard_adapter_rpi" }
]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.4"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
